# chat-backend-app-apple

./: .env  Arquivo `auth.py  Arquivo `auth_router.py  Arquivo `auth_service.py  Arquivo `chat.py  Arquivo `chat_router.py  Arquivo `chat_service.py  Arquivo `compose.yaml  Arquivo `connection_manager.py  Arquivo `database.py  Arquivo `main.py  Arquivo `message.py  Arquivo `settings.py  Arquivo `storage_service.py  Arquivo `user.py  Arquivo `user_router.py  Arquivo `ws_router.py  README.md  compose.yaml  makefile  pyproject.toml
Arquivo `config/: database.py  settings.py
Arquivo `models/: chat.py  message.py
Arquivo `routers/: auth_router.py  chat_router.py  user_router.py  ws_router.py
Arquivo `schemas/: user.py
Arquivo `services/: auth_service.py  chat_service.py
Arquivo `websocket/: connection_manager.py
alembic/: env.py
alembic/versions/: 37d82d4c0b75_auto_migration.py
src/: main.py
src/config/: database.py  migrator.py  settings.py
src/dependencies/: auth_dependency.py
src/models/: __init__.py  chat.py  message.py  user.py
src/routers/: auth_router.py  chat_router.py  message_router.py
src/schemas/: auth.py  chat.py  message.py
src/services/: auth_service.py  chat_service.py  migrator_service.py
src/websocket/: connection_manager.py  ws_router.py
tests/: main.test.py  test_auth_router.py
